--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">My most challenging project<br>Handbookers.com</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">My most challenging project<br><b>Handbookers.com</b></h2>
+                    <p class="lead">The development of a web platform to help users to find the best places in town based on crowd-sourced reviews.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/handbookers.gif" width="400px" height="400px" alt="Handbookers logo">
