--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">My most challenging project<br><b>Handbookers.com</b></h2>
+                    <h2 class="section-heading">My most challenging project:<br><b>Handbookers.com</b></h2>
                     <p class="lead">The development of a web platform to help users to find the best places in town based on crowd-sourced reviews.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/handbookers.gif" width="400px" height="400px" alt="Handbookers logo">
+                    <img class="img-responsive" src="img/handbookers.gif" width="300px" height="300px" alt="Handbookers logo">
                 </div>
             </div>
 
