--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">My most challenging project:<br><b>Handbookers.com</b></h2>
+                    <h2 class="section-heading">My most challenging project:<br><i>Handbookers.com</i></h2>
                     <p class="lead">The development of a web platform to help users to find the best places in town based on crowd-sourced reviews.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
