Hide last 2 sections

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     </div>
     <!-- /.content-section-a -->
-
+<!-- Hidden sections
     <div class="content-section-b">
 
         <div class="container">
@@ -138,10 +138,10 @@
             </div>
 
         </div>
-        <!-- /.container -->
+        <!-- /.container 
 
     </div>
-    <!-- /.content-section-b -->
+    <!-- /.content-section-b 
 
     <div class="content-section-a">
 
@@ -160,11 +160,12 @@
             </div>
 
         </div>
-        <!-- /.container -->
+        <!-- /.container 
 
     </div>
-    <!-- /.content-section-a -->
-
+    <!-- /.content-section-a 
+End of hidden sections -->
+	
 	<a  name="contact"></a>
     <div class="banner">
 
