--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p class="lead">The development of a web platform to help users to find the best places in town based on crowd-sourced reviews.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/handbookers.gif" width="300px" height="300px" alt="Handbookers logo" href="pg1.html">
+                    <a href="pg1.html"><img class="img-responsive" src="img/handbookers.gif" width="300px" height="300px" alt="Handbookers logo"></a>
                 </div>
             </div>
 
