changing address for service1 page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="service1.html">Services</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -107,11 +107,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><a href="pg1.html">My most challenging project:<br><i>Handbookers.com</i></a></h2>
+                    <h2 class="section-heading"><a href="service1.html">My most challenging project:<br><i>Handbookers.com</i></a></h2>
                     <p class="lead">The development of a web platform to help users to find the best places in town based on crowd-sourced reviews.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <a href="pg1.html"><img class="img-responsive" src="img/handbookers.gif" width="300px" height="300px" alt="Handbookers logo"></a>
+                    <a href="service1.html"><img class="img-responsive" src="img/handbookers.gif" width="300px" height="300px" alt="Handbookers logo"></a>
                 </div>
             </div>
 
@@ -211,7 +211,7 @@ End of hidden sections -->
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="service1.html">Services</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
