--- a/service1.html
+++ b/service1.html
@@ -43,16 +43,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">My Profile</a>
+                <a class="navbar-brand topnav" href="index.html">My Profile</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">About</a>
+                        <a href="index.html">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="service1.html">Services</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -99,11 +99,11 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#about">About</a>
+                            <a href="#index.html">About</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Services</a>
+                            <a href="service1.html">Services</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
