--- a/service1.html
+++ b/service1.html
@@ -74,10 +74,14 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">My most challenging project:<br><i>Handbookers.com</i></h2>
-                    <p class="lead">The development of a web platform to help users to find the best places in town based on crowd-sourced reviews.</p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <h2 class="section-heading">A little bit about <i>Handbookers.com<i>:</h2>
+                    <p class="lead">In 2011, me and my business partner decided to create this web platform that aimed to help users to find the best places in the city based on the opinions of other users about their experience in bars, restaurants, hotels, stores, etc.</p>
+                    <p>As none of us had any experience coding, we decided to contract a web development company to help us getting this idea off the drawing board (literally…because we had nothing but a rough draft of what it should look like). The company responsible for that was Velty – Digital Solutions. Using the Scrum method, we could together develop a simple project scope and setting deadlines for each stage of the project.</p>	
+		    <p>In parallel with the code development, it was necessary to create the visual identity of the website, which included designing the logo and the icons used for the navigation menu. The one responsible for that was the designer Mariano Rodriguez, who helped us developing more than 20 different types of icons that represented our categories and subcategories, creating a more intuitive environment for our platform.</p>			</div>
+                    <p>For the marketing and promotion of the web platform, we decided to use the YouTube as a tool to spread the idea. The plan was creating a funny and easy-to-understand video that explained the purpose and the advantages of the website for the users, encouraging them to visit it and sharing the video with their friends. The video creator partner was Janilson Lima and we used the embedded YouTube video as the main content of the Hotsite page, which we posted before making the beta version available online.</p>
+		    <p>As we did not have initial capital to invest in a significant marketing campaign, the content of our pages was carefully planned in order to increase our chances when it comes to Google organic search.  The list of keywords to be used for text production was a result of a Google AdWords research and the Contém Conteúdo was the enterprise that created the content for the main pages of the platform.</p>
+		    <p>After releasing our Minimum Viable Product, we notice it was not as intuitive as we thought and we decided to recreate the interface of the entire website. For this mission, the company Frevo Consultoria was the one assigned for. The cleaner, responsive and intuitive design of the new website resulted in more pageviews per day and guided more efficiently the users through the platform and its features.</p>
+		  <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/handbookers.gif" width="300px" height="300px" alt="Handbookers logo">
                 </div>
             </div>
