changing section class (wider section)

--- a/service1.html
+++ b/service1.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
+                    <hr class="section-heading-spacer-2">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">A little bit about <i>Handbookers.com<i>:</h2>
                     <p class="lead">In 2011, me and my business partner decided to create this web platform that aimed to help users to find the best places in the city based on the opinions of other users about their experience in bars, restaurants, hotels, stores, etc.</p><br>    
