--- a/service1.html
+++ b/service1.html
@@ -67,7 +67,7 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
-    <div class="content-section-a">
+    <div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
@@ -79,6 +79,9 @@
 		    <p class="lead">In parallel with the code development, it was necessary to create the visual identity of the website, which included designing the logo and the icons used for the navigation menu. The one responsible for that was the designer <a href="https://ar.linkedin.com/in/mariano690">Mariano Rodriguez</a>, who helped us developing more than 20 different types of icons that represented our categories and subcategories, creating a more intuitive environment for our platform.</p><br>			
                 </div>
 		<div class="col-lg-5 col-lg-offset-2 col-sm-6">
+		    <hr class="section-heading-spacer">
+		    <div class="clearfix"></div>
+		    <h2 class="section-heading"></h2>
                     <p class="lead">For the marketing and promotion of the web platform, we decided to use the YouTube as a tool to spread the idea. The plan was creating a funny and easy-to-understand video that explained the purpose and the advantages of the website for the users, encouraging them to visit it and sharing the video with their friends. The video creator partner was <a href="https://vimeo.com/gatodomato">Janilson Lima</a> and we used the embedded YouTube video as the main content of the Hotsite page, which we posted before making the beta version available online.</p><br>
 		    <p class="lead">As we did not have initial capital to invest in a significant marketing campaign, the content of our pages was carefully planned in order to increase our chances when it comes to Google organic search.  The list of keywords to be used for text production was a result of a Google AdWords research and the <a href="http://www.contemconteudo.com/">Contém Conteúdo</a> was the enterprise that created the content for the main pages of the platform.</p><br>	    
 		    <p class="lead">After releasing our Minimum Viable Product, we notice it was not as intuitive as we thought and we decided to recreate the interface of the entire website. For this mission, the company <a href="http://www.frevoconsultoria.com.br/">Frevo Consultoria</a> was the one assigned for. The cleaner, responsive and intuitive design of the new website resulted in more pageviews per day and guided more efficiently the users through the platform and its features.</p><br>
@@ -90,7 +93,7 @@
         <!-- /.container -->
 
     </div>
-    <!-- /.content-section-a -->
+    <!-- /.content-section-b -->
 
     <!-- Footer -->
     <footer>
