--- a/service1.html
+++ b/service1.html
@@ -74,8 +74,8 @@
 			<hr class="section-heading-spacer-2">
 		    	<div class="clearfix"></div>
 		    	<h2 class="section-heading">A little bit about <i>Handbookers.com<i>:</h2>
-          		<img class="img-responsive" src="img/ideia_infog1.gif" width="200px" height="200px" alt="Handbookers logo">
-			<img class="img-responsive" src="img/icons.gif" width="200px" height="200px" alt="Handbookers logo">
+          		<img class="img-responsive" src="img/ideia_infog1.gif" width="300" height="300" alt="Handbookers logo">
+			<img class="img-responsive" src="img/icons.jpg" width="200px" height="200px" alt="Handbookers logo">
 			<img class="img-responsive" src="img/handbookers.gif" width="200px" height="200px" alt="Handbookers logo">
 			<iframe width="300" height="200" src="https://www.youtube.com/embed/5IF71nhK_B0" frameborder="0" allowfullscreen></iframe>
 			<img class="img-responsive" src="img/handbookers.gif" width="200px" height="200px" alt="Handbookers logo">
