--- a/service1.html
+++ b/service1.html
@@ -82,10 +82,10 @@
 		    <p class="lead">After releasing our Minimum Viable Product, we notice it was not as intuitive as we thought and we decided to recreate the interface of the entire website. For this mission, the company <a href="http://www.frevoconsultoria.com.br/">Frevo Consultoria</a> was the one assigned for. The cleaner, responsive and intuitive design of the new website resulted in more pageviews per day and guided more efficiently the users through the platform and its features.</p><br>
 		  </div>
 		  <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+			<hr class="section-heading-spacer-2">
 		    	<div class="clearfix"></div>
           		<img class="img-responsive" src="img/handbo.jpg" width="400" height="500" alt="Handbookers logo">
-			<img class="img-responsive" src="img/ideia_infog1.gif" width="500px" alt="Handbookers logo">
-			<iframe width="500" src="https://www.youtube.com/embed/5IF71nhK_B0" frameborder="0" allowfullscreen></iframe>
+			<iframe width="500" height="400" src="https://www.youtube.com/embed/5IF71nhK_B0" frameborder="0" allowfullscreen></iframe>
                 </div>
                
 		
