--- a/service1.html
+++ b/service1.html
@@ -84,8 +84,9 @@
 		  <div class="col-lg-5 col-lg-offset-2 col-sm-6">
 			<hr class="section-heading-spacer-2">
 		    	<div class="clearfix"></div>
-          		<img class="img-responsive" src="img/handbo.jpg" width="400" height="500" alt="Handbookers logo">
-			<iframe width="500" height="400" src="https://www.youtube.com/embed/5IF71nhK_B0" frameborder="0" allowfullscreen></iframe>
+          		<img class="img-responsive" src="img/handbo.jpg" width="500" alt="Handbookers logo">
+			<br><br>
+			<iframe width="400" height="350" src="https://www.youtube.com/embed/5IF71nhK_B0" frameborder="0" allowfullscreen></iframe>
                 </div>
                
 		
