--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link rel="shortcut icon" href="favicon.ico">
-    <link rel="icon" type="image/gif" href="logo.gif">
+    <link rel="icon" type="image/gif" href="img/handbookers.gif">
 </head>
 
 <body>
