add another title tag

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="">
 
     <title>Erica Menezes - Web Developer</title>
+    <title>Welcome to my portfolio page!</title>
+	
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
