--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Welcome to my portfolio page. I'm a junior web developer playing with HTML5, CCS3, PHP and JS to create new innovative websites templates. Check my profile!">
+    <meta name="author" content="Erica Menezes (ericatham)">
 
     <title>Erica Menezes - Web Developer</title>
-    <title>Welcome to my portfolio page!</title>
 	
 
     <!-- Bootstrap Core CSS -->
